--- a/index.html
+++ b/index.html
@@ -152,48 +152,6 @@
                             </li>
                         </ul>
 
-                        <style type="text/css">
-                            .tg {
-                                border-collapse: collapse;
-                                border-spacing: 0;
-                            }
-
-                            .tg td {
-                                border-color: black;
-                                border-style: solid;
-                                border-width: 1px;
-                                font-family: Arial, sans-serif;
-                                font-size: 14px;
-                                overflow: hidden;
-                                padding: 10px 5px;
-                                word-break: normal;
-                            }
-
-                            .tg th {
-                                border-color: black;
-                                border-style: solid;
-                                border-width: 1px;
-                                font-family: Arial, sans-serif;
-                                font-size: 14px;
-                                font-weight: normal;
-                                overflow: hidden;
-                                padding: 10px 5px;
-                                word-break: normal;
-                            }
-
-                            .tg .tg-8jgo {
-                                border-color: #ffffff;
-                                text-align: center;
-                                vertical-align: top
-                            }
-
-                            .tg .tg-0pky,
-                            .tg .tg-0lax {
-                                border-color: inherit;
-                                text-align: left;
-                                vertical-align: top
-                            }
-                        </style>
                         <div class="large-table">
                             <table class="tg">
                                 <thead>
@@ -348,12 +306,17 @@
 
 
 
-                        <h2 id="writing-consonants">Writing consonants</h2>
+                        <h2 id="writing-consonants">writing consonants</h2>
 
-                        <p>The general character shape of written consonant sounds indicates location in the mouth (Y
-                            axis); each
-                            individual character indicates a series of similar sounds; and diacritics distinguish each
-                            sound in the series (X axis).</p>
+                        <h3>general patterns</h3>
+
+                        <p>I write 19 consonant sounds with twelve letters; multiple similar sounds can be grouped
+                            under a single letter and then distinguished with diacritics (X axis on the
+                            chart below).</p>
+
+                        <p>Each letter follows one of three shape patterns, depending on if the letter has a stem and
+                            where that stem is placed. These patterns indicate approximately where the letter is
+                            pronounced in the mouth (Y axis on the chart below).</p>
 
                         <div class="large-table simple-script">
                             <table class="tg">
@@ -397,9 +360,24 @@
                             </table>
                         </div>
 
-                        <p>When written, the 29 consonants follow this basic pattern. One exception for practicality:
+                        <p>To take one example, here's how the above patterns play out with the letter <span
+                                class="script">p</span>:</p>
+
+                        <ul>
+                            <li><span class="script">p</span> has a stem on the left side of the letter, meaning it
+                                represents a sound pronounced at the lips. It represents the <code>p</code> sound.
+                            </li>
+                            <li><span class="script">b</span> is the letter <span class="script">p</span> with
+                                a voiced mark. If you add voice to the sound <code>p</code>, you get a <code>b</code>
+                                sound.
+                            </li>
+                        </ul>
+
+                        <h3>all consonants</h3>
+
+                        <p>The 29 written consonant sounds follow the above patterns. One exception for practicality:
                             it is not necessary to write the voiced diacritic for voiced consonants with no unvoiced
-                            counterpart (m, n, l, r, ŋ).</p>
+                            counterpart (m, w, n, l, r, ŋ).</p>
 
                         <div class="large-table script">
                             <table class="tg">
@@ -534,6 +512,20 @@
                         <p>Vowels are a mess. Come back later!</p>
 
                         <h2 id="cursive">Cursive manuscript</h2>
+
+                        <p>Writing this script in cursive is not as straightforward as english cursive because letters
+                            do
+                            not consistently attach in the same place (in english cursive, this tends to be at the
+                            writing
+                            line).</p>
+
+                        <p>How a letter is written and how it attaches to what comes before and after depends on two
+                            factors:</p>
+
+                        <ul>
+                            <li>If the letter is at the beginning, middle, or end of a word.</li>
+                            <li>If the stroke of the pen approaches this letter from the top, middle, or bottom.</li>
+                        </ul>
                         <!-- <div class="large-table cursive">
                             <table class="tg">
                                 <thead>
@@ -658,12 +650,12 @@
                         <p>I’ll first describe the simple practice, which can be used with a variety of media,
                             digital or otherwise. Then, I’ll briefly explain one way that I implement it using a
                             specific medium — software.</p>
-                        <h2 id="notes">I. Personal notes</h2>
+                        <h2 id="notes">i. personal notes</h2>
                         <p>In some limited ways, my habit resembles note-taking approaches like Zettelkasten. However,
                             unlike Zettelkasten, the goal is not &quot;thinking.&quot; A better word would maybe be
                             &quot;reflection.&quot;</p>
                         <p>It starts with a simple note.</p>
-                        <h3 id="making-a-note">Making a Note</h3>
+                        <h3 id="making-a-note">making a note</h3>
                         <p>A note is a simple, crystal-clear expression of something that matters. It can be a feeling
                             that I’m relieved to finally be able to put my finger on.
                             A memory. A realization.</p>
@@ -682,7 +674,7 @@
                             will last, taking on more significance when they do.</p>
                         <p>Limiting myself to writing notes that are short, simple, and few, is already an exercise in
                             reflection. But it&#39;s only the beginning.</p>
-                        <h3 id="making-stories">Making Stories</h3>
+                        <h3 id="making-stories">making stories</h3>
                         <p>As small constellations of notes appear, stories will being to emerge from them. This is
                             where the reflection process really begins to be fertile.</p>
                         <p>“Stories” are the patterns of recognition that appear once I&#39;m confronted with a given
@@ -729,8 +721,8 @@
                             <li>Some notes are captured in no stories at all, still floating freely. Some have found
                                 their place within as much as half of the stories, seen differently in each.</li>
                         </ul>
-                        <h2 id="software">II. Software</h2>
-                        <h3 id="files-local-plain-text">Files: local plain text</h3>
+                        <h2 id="software">ii. software</h2>
+                        <h3 id="files-local-plain-text">files: local plain text</h3>
                         <p>I use local plain text to create my notes and stories. This medium has turned out to be
                             perfectly suited for this kind of reflection, as well as very enjoyable.</p>
                         <p>First, plain text has the simplicity of writing by hand. None of the compatibility concerns
@@ -748,7 +740,7 @@ Here is a thought… an *emphatic* thought.</pre>
                             a 203 kilobyte folder, an average of 900 bytes per note.</p>
                         <p>There are a few pieces of software which are particularly suited for viewing these files and
                             acknowledging the relationships between them.</p>
-                        <h3 id="apps-markdown-wikis">Apps: markdown wikis</h3>
+                        <h3 id="apps-markdown-wikis">apps: markdown wikis</h3>
                         <p>The key feature which markdown editors bring to the table is not so much the ability to
                             render notes as HTML — Markdown is visually intelligible without rendering, a uniquely cool
                             feature — nor necessarily the ability to style the rendering with CSS, although that can be
