--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 
                         <p>It is a work in progress.</p>
 
+                        <img src="assets/images/script/work-in-progress.svg" alt="" width="400px" style="opacity: 0.6">
+
                         <h2 id="consonant-sounds">consonant sounds</h2>
 
                         <p>The table below summarizes how the script approaches organizing consonants.</p>
@@ -292,7 +294,7 @@
 
                         <h3>general patterns</h3>
 
-                        <p>I write 19 consonant sounds with twelve letters; multiple similar sounds can be grouped
+                        <p>I write 29 consonant sounds with only twelve letters. Multiple similar sounds are grouped
                             under a single letter and then distinguished with diacritics (X axis on the
                             chart below).</p>
 
@@ -342,16 +344,20 @@
                             </table>
                         </div>
 
-                        <p>To take one example, here's how the above patterns play out with the letter <span
-                                class="script">p</span>:</p>
+                        <p>To take one example, here's how the above patterns play out with the letter <code><span
+                            class="script">p</span></code>:</p>
 
                         <ul>
-                            <li><span class="script">p</span> has a stem on the left side of the letter, meaning it
-                                represents a sound pronounced at the lips. It represents the <code>p</code> sound.
+                            <li><code><span class="script">p</span></code> has a stem on the left side of the letter,
+                                meaning it
+                                is a sound pronounced at the lips. It represents the <code>p</code> sound.
                             </li>
-                            <li><span class="script">b</span> is the letter <span class="script">p</span> with
-                                a voiced mark. If you add voice to the sound <code>p</code>, you get a <code>b</code>
-                                sound.
+                            <li>If you take the letter <code><span class="script">p</span></code> and add a voice mark
+                                on top of it,
+                                you get
+                                <code><span class="script">b</span></code>. This represents the <code>b</code> sound
+                                (<code>p</code>
+                                + voice).
                             </li>
                         </ul>
 
@@ -491,8 +497,14 @@
 
                         <h2 id="vowels">Vowels</h2>
 
-                        <p>Vowels are a mess. Come back later!</p>
+                        <p>Vowels are still evolving in how I write them. This flexibility doesn't tend to
+                            impact the rest of the writing system, however, since vowels are represented as diacritics
+                            that freely float below the consonant that precede them.
+                        </p>
 
+                        <p>For now, I tend to be able to get away with writing only 15 vowel sounds, which, much like
+                            consonant sounds, are organized into families (Y axis) so that we don't have to write 15
+                            unique graphemes.</p>
                         <div class="large-table vowels">
 
                             <table class="tg">
@@ -552,23 +564,43 @@
                             </table>
 
                         </div>
+                        <p>In semitic languages like Hebrew and Arabic, in which vowels are also written as diacritics,
+                            vowels are often omitted from writing altogether with no impact on reader comprehension. We
+                            can't do this in English because our language is not built around syllables in the same way
+                            that semitic languages are. And yet I do find that as I become more familiar with this
+                            script, I can omit a great deal of vowels without the text becoming ambiguous. This greatly
+                            speeds up writing.</p>
 
+                        <p>In the same way, some consonant diacritics can be discarded as well.</p>
+
+                        <p>For example, take the article <code>the</code>. It is often sufficient to simply write it as
+                            the letter <code><span class="script">t</span></code>, omitting both the top diacritic
+                            indicating that it is specifically a <code>đ</code> consonant sound, as well as the bottom
+                            diacritic indicating that it is followed by a short <code>u</code> vowel sound
+                            (approximately). “I took <code><span class="script">t</span></code> train” works.</p>
 
                         <h2 id="cursive">Cursive manuscript</h2>
 
-                        <p>Writing this script in cursive is not as straightforward as english cursive because letters
-                            do
-                            not consistently attach in the same place (in english cursive, this tends to be at the
-                            writing
-                            line).</p>
+                        <p>Writing this script in cursive is not as straightforward as typical english cursive with
+                            a latin alphabet because letters
+                            do not consistently attach in the same place (in english cursive, this tends to be at the
+                            writing line).</p>
 
-                        <p>How a letter is written and how it attaches to what comes before and after depends on two
-                            factors:</p>
+                        <p>Instead, how a letter is written and how it attaches to what comes before and after depends
+                            on two factors:</p>
 
                         <ul>
                             <li>If the letter is at the beginning, middle, or end of a word.</li>
                             <li>If the stroke of the pen approaches this letter from the top, middle, or bottom.</li>
                         </ul>
+
+                        <p>The table below summarizes how letter changes shape and attaches based on these two factors.
+                            Letters not shown on
+                            the chart (<span class="script">k</span>,
+                            <span class="script">N</span>, <span class="script">h</span>)
+                            don’t change.
+                        </p>
+
                         <!-- <div class="large-table cursive">
                             <table class="tg">
                                 <thead>
@@ -671,8 +703,15 @@
                                     </tr>
                                 </tbody>
                             </table>
-
                         </div>
+
+                        <p>Since cursive is
+                            partly a matter of ergonomics, partly a matter of esthetics, there is flexibility here. For
+                            example, I often find that I like to use the middle form of letters in the
+                            <code><span class="script">t</span></code> family at the beginning of one-syllable words.
+                        </p>
+
+                        <h2 id="samples">samples</h2>
 
                     </article>
                 </main>
@@ -880,6 +919,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <p><a onclick="scrollToHeading('writing-consonants')">consonants: shapes</a></p>
                         <p><a onclick="scrollToHeading('vowels')">vowels</a></p>
                         <p><a onclick="scrollToHeading('cursive')">cursive</a></p>
+                        <p><a onclick="scrollToHeading('samples')">samples</a></p>
                     </section>
                     <section>
                         <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
