--- a/0-archive/index-1.html
+++ b/0-archive/index-1.html
@@ -4,7 +4,7 @@
 <head>
     <title>picturamundi</title>
     <link id="favicon" rel="icon" href="favicon/favicon.svg">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style-old.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
 </head>
