--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
                         <p>It is a work in progress.</p>
 
-                        <img src="assets/images/script/work-in-progress.svg" alt="" width="400px" style="opacity: 0.6">
+                        <p style="text-align: center;"> <img src="assets/images/script/work-in-progress.svg" alt=""
+                                width="400px" style="opacity: 0.7; margin: auto;">
+                        </p>
 
                         <h2 id="consonant-sounds">consonant sounds</h2>
 
@@ -253,40 +255,9 @@
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                     </tr>
-                                    <!-- <tr>
-                                        <td class="tg-0pky">h</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                    </tr> -->
                                 </tbody>
                             </table>
                         </div>
-                        <style>
-                            table {
-                                margin: 80px 0px;
-                                margin: auto;
-                            }
-
-                            .tg td {
-                                min-width: 2.5rem;
-                            }
-
-                            .tg .tg-8jgo {
-                                border-color: var(--background-color);
-                                border-right: inherit;
-                                border-bottom: inherit;
-                                text-align: center;
-                                vertical-align: middle;
-                            }
-
-                            .tg th,
-                            .tg td {
-                                font-family: 'Courier New', Courier, monospace;
-                            }
-                        </style>
 
 
 
@@ -483,14 +454,6 @@
                                         <td class="tg-0pky script"></td>
                                         <td class="tg-0pky script"></td>
                                     </tr>
-                                    <!-- <tr>
-                                        <td class="tg-0pky">h</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                    </tr> -->
                                 </tbody>
                             </table>
                         </div>
@@ -505,8 +468,8 @@
                         <p>For now, I tend to be able to get away with writing only 15 vowel sounds, which, much like
                             consonant sounds, are organized into families (Y axis) so that we don't have to write 15
                             unique graphemes.</p>
-                        <div class="large-table vowels">
 
+                        <div class="large-table vowels">
                             <table class="tg">
                                 <thead>
                                     <tr>
@@ -601,7 +564,7 @@
                             don’t change.
                         </p>
 
-                        <!-- <div class="large-table cursive">
+                        <div class="large-table cursive">
                             <table class="tg">
                                 <thead>
                                     <tr>
@@ -655,8 +618,8 @@
                                 </tbody>
                             </table>
 
-                        </div> -->
-                        <div class="large-table cursive">
+                        </div>
+                        <!-- <div class="large-table cursive">
                             <table class="tg">
                                 <thead>
                                     <tr>
@@ -677,7 +640,7 @@
                                 <tbody>
                                     <tr>
                                         <td class="tg-0lax">p</td>
-                                        <td class="tg-0lax img" colspan="7" rowspan="8"><img
+                                        <td class="tg-0lax img" colspan="7" rowspan="8"><img id="cursive-table"
                                                 src="assets/images/script/cursive.svg"></td>
                                     </tr>
                                     <tr>
@@ -703,7 +666,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
+                        </div> -->
 
                         <p>Since cursive is
                             partly a matter of ergonomics, partly a matter of esthetics, there is flexibility here. For
