add #script content, h# styling

--- a/index.html
+++ b/index.html
@@ -117,18 +117,22 @@
 
                         <p>It is a work in progress.</p>
 
-                        <p style="text-align: center;"> <img src="assets/images/script/work-in-progress.svg" alt=""
-                                width="400px" style="opacity: 0.7; margin: auto;">
+                        <!-- <p style="text-align: center;"> <img src="assets/images/script/work-in-progress.svg" alt=""
+                                width="400px"></p> -->
+                        <p style="text-align: center"> <img src="assets/images/script/image.svg" alt="" width="800px"
+                                style="opacity: 0.9; margin: auto;">
                         </p>
 
-                        <h2 id="consonant-sounds">consonant sounds</h2>
+                        <h2 id="consonants">consonants</h2>
 
                         <p>The table below summarizes how the script approaches organizing consonants.</p>
+
+                        <h3 id="consonant-sounds">consonant sounds</h3>
 
                         <p>1. Sounds are organized into three families based on the general area where they are
                             pronounced
                             in the mouth (Y axis).</p>
-                        <p>2. Within the families, sounds are organized in series based on three factors of
+                        <p>2. Within the families, sounds are organized into groups based on three factors of
                             similarity (X axis):</p>
                         <ul>
                             <li>Unvoiced and voiced variation on the same sound (e.g. t/d)</li>
@@ -260,18 +264,16 @@
                         </div>
 
 
+                        <h3 id="writing-consonants">writing consonants</h3>
 
-                        <h2 id="writing-consonants">writing consonants</h2>
+                        <p>Each consonant follows one of three shape patterns (Y axis on the chart below), depending on
+                            whether the letter has a stem and where the stem is placed. These three “families” indicate
+                            approximately where a letter is pronounced in the mouth (see consonant sounds above).</p>
 
-                        <h3>general patterns</h3>
-
-                        <p>I write 29 consonant sounds with only twelve letters. Multiple similar sounds are grouped
-                            under a single letter and then distinguished with diacritics (X axis on the
+                        <p>I write 29 consonant sounds with only twelve letters. This is because
+                            similar sounds are grouped (see consonant sounds above), and each group is written with
+                            a single letter. Diacritics are then used to distinguish sounds in the group (X axis on the
                             chart below).</p>
-
-                        <p>Each letter follows one of three shape patterns, depending on if the letter has a stem and
-                            where that stem is placed. These patterns indicate approximately where the letter is
-                            pronounced in the mouth (Y axis on the chart below).</p>
 
                         <div class="large-table simple-script">
                             <table class="tg">
@@ -331,8 +333,6 @@
                                 + voice).
                             </li>
                         </ul>
-
-                        <h3>all consonants</h3>
 
                         <p>The 29 written consonant sounds follow the above patterns. One exception for practicality:
                             it is not necessary to write the voiced diacritic for voiced consonants with no unvoiced
@@ -458,11 +458,11 @@
                             </table>
                         </div>
 
-                        <h2 id="vowels">Vowels</h2>
+                        <h2 id="vowels">vowels</h2>
 
                         <p>Vowels are still evolving in how I write them. This flexibility doesn't tend to
                             impact the rest of the writing system, however, since vowels are represented as diacritics
-                            that freely float below the consonant that precede them.
+                            that freely float below the consonant that precedes them.
                         </p>
 
                         <p>For now, I tend to be able to get away with writing only 15 vowel sounds, which, much like
@@ -528,11 +528,13 @@
 
                         </div>
                         <p>In semitic languages like Hebrew and Arabic, in which vowels are also written as diacritics,
-                            vowels are often omitted from writing altogether with no impact on reader comprehension. We
+                            they are often omitted from writing altogether with no impact on reader comprehension. We
                             can't do this in English because our language is not built around syllables in the same way
-                            that semitic languages are. And yet I do find that as I become more familiar with this
-                            script, I can omit a great deal of vowels without the text becoming ambiguous. This greatly
-                            speeds up writing.</p>
+                            that semitic languages are. </p>
+
+                        <p>That said, I do find that as I become more familiar with this
+                            script, I learn to omit a great deal of vowels without the text becoming ambiguous. This
+                            makes writing much more efficient.</p>
 
                         <p>In the same way, some consonant diacritics can be discarded as well.</p>
 
@@ -540,9 +542,11 @@
                             the letter <code><span class="script">t</span></code>, omitting both the top diacritic
                             indicating that it is specifically a <code>đ</code> consonant sound, as well as the bottom
                             diacritic indicating that it is followed by a short <code>u</code> vowel sound
-                            (approximately). “I took <code><span class="script">t</span></code> train” works.</p>
+                            (approximately). “I took <code><span class="script">t</span></code> train” just works.</p>
 
-                        <h2 id="cursive">Cursive manuscript</h2>
+                        <h2 id="cursive">cursive manuscript</h2>
+
+                        <h3>connecting letters</h3>
 
                         <p>Writing this script in cursive is not as straightforward as typical english cursive with
                             a latin alphabet because letters
@@ -619,60 +623,73 @@
                             </table>
 
                         </div>
-                        <!-- <div class="large-table cursive">
-                            <table class="tg">
-                                <thead>
-                                    <tr>
-                                        <th class="tg-8jgo" rowspan="2">cursive</th>
-                                        <th class="tg-0lax" rowspan="2">beginning</th>
-                                        <th class="tg-0lax" colspan="3">middle</th>
-                                        <th class="tg-0lax" colspan="3">end</th>
-                                    </tr>
-                                    <tr>
-                                        <th class="tg-0lax">top</th>
-                                        <th class="tg-0lax">middle</th>
-                                        <th class="tg-0lax">bottom</th>
-                                        <th class="tg-0lax">top</th>
-                                        <th class="tg-0lax">middle</th>
-                                        <th class="tg-0lax">bottom</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="tg-0lax">p</td>
-                                        <td class="tg-0lax img" colspan="7" rowspan="8"><img id="cursive-table"
-                                                src="assets/images/script/cursive.svg"></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">m</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">f</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">t</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">s</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">n</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">l</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0lax">r</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div> -->
 
-                        <p>Since cursive is
-                            partly a matter of ergonomics, partly a matter of esthetics, there is flexibility here. For
+                        <p>Since cursive is partly a matter of ergonomics, partly a matter of esthetics, there is
+                            flexibility here. For
                             example, I often find that I like to use the middle form of letters in the
                             <code><span class="script">t</span></code> family at the beginning of one-syllable words.
                         </p>
+
+                        <h3>connecting words</h3>
+
+                        <p>Words can appear next to each other in a larger variety of ways than in normal english
+                            writing. There are no rules around this flexibility, other than that :</p>
+
+                        <ul>
+                            <li>Seperation between distinct words is always recognizable in that those words don't
+                                connect in a cursive manner</li>
+                            <li>Word order is always recognizable by which beginning letter of a given word appears
+                                first on the writing line.</li>
+                        </ul>
+
+                        <p>Some exmaples :</p>
+
+                        <p>The most obvious way to write the words <code>the pen</code> would be in the following way.
+                        </p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script/the-pen-1.svg" alt="">
+                        </p>
+
+                        <p>However, I would probably write it as below.</p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script/the-pen-2.svg" alt="">
+                        </p>
+
+                        <p>In addition to choosing the middle form of the letter
+                            <code><span class="script">t</span></code>, I have also extended the tail of this letter in
+                            a way that that obscures the space between
+                            the two words because it causes the second to “sit” on the first. However, as the letters of
+                            the words are not connected with cursive, the words
+                            remain distinct. Cursive, and not spaces,
+                            distinguishes words.
+                        </p>
+
+                        <p>To take another example, below is how I would personally write the two words
+                            <code>of the</code>.
+                        </p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script/of-the.svg" alt="">
+                        </p>
+
+                        <p>The word <code>the</code> sits on top of the word <code>of</code> (as something of a rule, I
+                            only do this if the top word can float over a stroke which sits on the line in the bottom
+                            word). However,
+                            word
+                            order remains clear because the first letter of the first word appears before the first
+                            letter of the second word.</p>
+
+                        <p>For an example of how this looks in a phrase, below is how it would appear in the words “the
+                            nib
+                            of the pen”.</p>
+
+                        <p style="text-align: center;">
+                            <img class="script-scan" src="assets/images/script/the-nib-of-the-pen.svg" alt="">
+                        </p>
+
+
 
                         <h2 id="samples">samples</h2>
 
@@ -685,6 +702,10 @@
                         <p>Here I try to describe a simple writing habit that I gradually formed over a couple of years
                             as an exercise in grief. Since then, this practice has become surprisingly clarifying in a
                             variety of other ways as well.</p>
+                        <!-- <p><img class="theme-img" src="assets/images/obsidian-graph.jpg" alt="">
+                        </p>
+                        <p>The above graph is a woefully inadequate representation of the reflection process for reasons
+                            that should become clear below. But it gives a dim idea of the sense-making process.</p> -->
                         <p>The habit has been to let how I write grow as an extension of the personal reflection
                             process. “How I write” means content of course, but also format, and perhaps most important,
                             relationships: the relationship of different entries to each other, the relationship between
@@ -878,8 +899,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                     </section>
                     <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
-                        <p><a onclick="scrollToHeading('consonant-sounds')">consonants: sounds</a></p>
-                        <p><a onclick="scrollToHeading('writing-consonants')">consonants: shapes</a></p>
+                        <p><a onclick="scrollToHeading('consonants')">consonants</a></p>
                         <p><a onclick="scrollToHeading('vowels')">vowels</a></p>
                         <p><a onclick="scrollToHeading('cursive')">cursive</a></p>
                         <p><a onclick="scrollToHeading('samples')">samples</a></p>
